# svg-path-parser

./: Cargo.toml  README.md  TODO.md
src/: curves.rs  elements.rs  lib.rs  utils.rs
