[package]
name = "svg-path-parser"
description = "Generate a list of points from SVG path strings"
version = "0.1.0"
edition = "2021"
authors = [ "UnicodingUnicorn" ]
license = "MIT"
keywords = [ "svg" ]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
