[package]
name = "svg-path-parser"
description = "Generate a list of points from SVG path strings"
repository = "https://github.com/UnicodingUnicorn/svg-path-parser"
version = "0.1.1"
edition = "2021"
authors = [ "UnicodingUnicorn" ]
license = "MIT"
keywords = [ "svg" ]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
